--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body ng-app="OWMApp">
-	<a href="#/cities/New_York">New York</a>
+	<a href="#/cities/New%20York">New York</a>
     <a href="#/cities/Dallas">Dallas</a>
     <a href="#/cities/Chicago">Chicago</a>
     <div ng-view></div>
